# MemoryManagerSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  MemoryManagerSimulator.sln  README.md
DataStructuresLibrary/: DataStructuresLibrary.vcxproj  DataStructuresLibrary.vcxproj.filters
MemoryManagerSimulator/: CMakeLists.txt  Constants.c  Constants.h  Job.c  Job.h  JobManager.c  JobManager.h  Memory.h  MemoryManager.c  MemoryManager.h  MemoryManagerSimulator.c  MemoryManagerSimulator.vcxproj  MemoryManagerSimulator.vcxproj.filters  PMT.h  Page.h  PageManagementTable.c  PageManagementTable.h  PhysicalMemoryPage.c  PhysicalMemoryPage.h  TLB.h  VirtualMemoryPage.c  VirtualMemoryPage.h  driver.c
MemoryManagerSimulator.GUI/: App.cpp  CMakeLists.txt  ImGuiDataContext.cpp  ImGuiDataContext.h  MainWindow.cpp  MemoryManagerConstants.cpp  MemoryManagerConstants.h  MemoryManagerGuiContext.cpp  MemoryManagerGuiContext.h  MemoryManagerSimulator.GUI.vcxproj  MemoryManagerSimulator.GUI.vcxproj.filters  MemoryManagerWrapper.cpp  MemoryManagerWrapper.h  imgui.ini
MemoryManagerSimulator.GUI/resources/icons/: icon_packer.py
MemoryManagerSimulator.Test/: MemoryManagerSimulator.Test.vcxproj  MemoryManagerSimulator.Test.vcxproj.filters  test.cpp
